# mortar

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum  main.go
docker/jupyter-notebook/: Dockerfile  trust-notebooks.sh
docker/mortar-pg/: Dockerfile  setup.sql
docker/mortar-server/: Dockerfile
docker/nginx/: nginx.conf
docker/pg/: Dockerfile  backfill.sql  install_timescale.sh  setup.sql
docker/prometheus/: prometheus.yml
docker/reasoner/: Dockerfile
docker/single-container-hack/: .dockerignore  Dockerfile
docs/: Dockerfile  _config.yml  _toc.yml  install.md  intro.md  requirements.txt
docs/_static/: custom.js
docs/api/: inserting.md  inserting_metadata.md  overview.md  querying.md
docs/datamodel/: brick.md  mortar.md  overview.md  timeseries.md
internal/config/: config.go  timeouts.go
internal/database/: checks.go  database.go  messages.go
internal/logging/: logging.go
internal/server/: middleware.go  server.go
notebooks/: Brick.ttl  load_data_example.ipynb  query_data_example.ipynb  rename.sh  requirements.txt
python/: ciee.ttl  client.py  ebu3b.ttl  load_csv.py  load_csv.sh  read.py
python/pymortar/: pyproject.toml  test.py
python/pymortar/pymortar/: __init__.py  application.py  mortar_pb2.py  mortar_pb2_grpc.py
python/pymortar/tests/: test_pymortar.py
reasoner/: Cargo.toml
reasoner/src/: main.rs
scripts/: cleanup-docker.sh
