[package]
name = "reasoner"
version = "0.1.0"
authors = ["Gabe Fierro <gtfierro@cs.berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reasonable = "0.1.10"
reasonable = { path = "../../../reasonable/" }
# tokio = { version = "0.2", versions = ["full"] }
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
oxigraph = "0.1"
bytes = "0.5.6"
tokio-postgres = "0.5.5"
rdf = "0.1.4"
