[package]
name = "reasoner"
version = "0.1.0"
authors = ["Gabe Fierro <gtfierro@cs.berkeley.edu>"]
edition = "2018"

[dependencies]
reasonable = "0.1.12"
#reasonable = { path = "../../../reasonable/" }
tokio = { version = "0.2", features = ["macros", "time"] }
warp = "0.2"
oxigraph = { version="0.1", features=["sled"] }
bytes = "0.5.6"
tokio-postgres = "0.5.5"
rdf = "0.1.4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
