[tool.poetry]
name = "pymortar"
version = "2.0.6a5"
description = ""
authors = ["Gabe Fierro <gtfierro@cs.berkeley.edu>"]

[tool.poetry.dependencies]
python = "^3.7.1"
rdflib = "^6.0"
requests = "^2.25.0"
pyarrow = "^5.0"
pandas = "^1.3"
googleapis-common-protos = "^1.52.0"
brickschema = "^0.5"
python-snappy = "^0.6.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
